--- a/app/src/main/res/layout/layout_job_horizontal_scroll.xml
+++ b/app/src/main/res/layout/layout_job_horizontal_scroll.xml
@@ -6,28 +6,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:textSize="13sp"
-        android:textColor="@color/C_B2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:text="薪资"/>
+<!--    <TextView-->
+<!--        android:id="@+id/tv_title"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="12dp"-->
+<!--        android:textSize="13sp"-->
+<!--        android:textColor="@color/C_B2"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        tools:text="薪资"/>-->
 
     <com.zhaopin.common.widget.mvx.flowLayout.MVXFlowRecyclerView
         android:id="@+id/rv_flow"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
         android:paddingEnd="48dp"
         android:clipToPadding="false"
         app:item_orientation="horizontal"
         app:item_margin_right="8dp"
-        app:layout_constraintStart_toEndOf="@id/tv_title"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
