--- a/app/src/main/res/layout/position_list_search_bar.xml
+++ b/app/src/main/res/layout/position_list_search_bar.xml
@@ -5,8 +5,9 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="36dp"
+        android:layout_height="52dp"
         android:layout_gravity="center_vertical"
+        android:paddingVertical="8dp"
         android:background="@color/white"
         android:visibility="visible">
 
