--- a/app/src/main/res/layout/testsss.xml
+++ b/app/src/main/res/layout/testsss.xml
@@ -13,8 +13,7 @@
         android:layout_marginEnd="12dp"
         android:textSize="13sp"
         android:textColor="@color/C_B2"
-        android:visibility="gone"
-        android:text="薪资"/>
+        tools:text="薪资"/>
 
     <TextView
         android:id="@+id/tv_tag"
