--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,4 +31,7 @@
     <color name="colorLightBlue">#81D4FA</color>
     <color name="colorYellow">#FFD700</color>
 
+    <color name="resume_e7e7e7">#e7e7e7</color>
+
+
 </resources>
