--- a/app/src/main/res/xml/recommend_job_expand.xml
+++ b/app/src/main/res/xml/recommend_job_expand.xml
@@ -51,8 +51,8 @@
         app:duration="200"
         app:motionInterpolator="easeInOut">
 
-        <OnClick app:targetId="@id/tv_collapse"
-                 app:clickAction="transitionToStart"/>
+<!--        <OnClick app:targetId="@id/tv_collapse"-->
+<!--                 app:clickAction="transitionToStart"/>-->
 
     </Transition>
 
