--- a/app/src/main/res/layout/layout_campus_home_tip.xml
+++ b/app/src/main/res/layout/layout_campus_home_tip.xml
@@ -1,57 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- 简历提示 -->
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.zhaopin.common.widget.RCConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/rlCampusResumeTip"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingStart="12dp"
+    app:layout_radius="8dp"
+    android:background="@color/C_FFFFFF_60"
+    tools:ignore="RtlSymmetry">
 
-    <data>
-
-    </data>
-
-    <com.zhaopin.common.widget.RCConstraintLayout
-        android:id="@+id/rlCampusResumeTip"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/tvCampusResumeTitle"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingStart="12dp"
-        app:layout_radius="8dp"
-        android:background="@color/C_FFFFFF_60"
-        tools:ignore="RtlSymmetry">
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        style="@style/style_text_normal_14"
+        android:textColor="@color/C_222222"
+        android:text="已毕业多年？切换职场版，发现专属好工作" />
 
-        <TextView
-            android:id="@+id/tvCampusResumeTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            style="@style/style_text_normal_14"
-            android:textColor="@color/C_222222"
-            android:text="已毕业多年？切换职场版，发现专属好工作" />
+    <TextView
+        android:id="@+id/tvCampusResumeCheck"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:includeFontPadding="false"
+        app:layout_constraintTop_toBottomOf="@id/tvCampusResumeTitle"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="16dp"
+        android:drawablePadding="2dp"
+        android:textColor="@color/C_5B7BE9"
+        android:textSize="@dimen/F_13"
+        android:textStyle="bold"
+        android:text="去切换"
+        app:drawableEndCompat="@drawable/c_base_ic_triangle_r_blue_1" />
 
-        <TextView
-            android:id="@+id/tvCampusResumeCheck"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:includeFontPadding="false"
-            app:layout_constraintTop_toBottomOf="@id/tvCampusResumeTitle"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="12dp"
-            android:layout_marginBottom="16dp"
-            android:drawablePadding="2dp"
-            android:textColor="@color/C_5B7BE9"
-            android:textSize="@dimen/F_13"
-            android:textStyle="bold"
-            android:text="去切换"
-            app:drawableEndCompat="@drawable/c_base_ic_triangle_r_blue_1" />
+    <ImageView
+        android:id="@+id/ivCampusResumeCancel"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
+        android:background="@drawable/position_ic_gray_close" />
 
-        <ImageView
-            android:id="@+id/ivCampusResumeCancel"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="4dp"
-            android:background="@drawable/position_ic_gray_close" />
-
-    </com.zhaopin.common.widget.RCConstraintLayout>
-</layout>
+</com.zhaopin.common.widget.RCConstraintLayout>
