--- a/app/src/main/res/layout/layout_job_recommend_empty.xml
+++ b/app/src/main/res/layout/layout_job_recommend_empty.xml
@@ -35,23 +35,41 @@
             android:layout_height="wrap_content"
             android:src="@drawable/b_common_b_app_no_data_icon"/>
 
-        <TextView
-            android:id="@+id/tv_empty_content"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:gravity="center"
-            style="@style/style_text_bold_16"
-            android:textColor="@color/C_B1"
-            tools:text="未找到「乌鲁木齐」的销售经理职位"/>
+            android:layout_marginTop="16dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:textSize="14sp"
-            android:textColor="@color/C_B3"
-            android:text="@string/change_tag_retry"/>
+            <TextView
+                android:id="@+id/tv_empty_content"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                app:layout_constraintWidth_default="percent"
+                app:layout_constraintWidth_percent="0.7"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                style="@style/style_text_bold_16"
+                android:textColor="@color/C_B1"
+                tools:text="未找到「乌鲁木齐」的销售经理职位"/>
+
+            <TextView
+                android:id="@+id/tv_empty_content_desc"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                app:layout_constraintWidth_default="percent"
+                app:layout_constraintWidth_percent="0.7"
+                app:layout_constraintTop_toBottomOf="@id/tv_empty_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="8dp"
+                android:textSize="14sp"
+                android:textColor="@color/C_B3"
+                android:text="@string/change_tag_retry"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.zhaopin.common.widget.RCLinearLayout>
 
