--- a/app/src/main/res/drawable-v23/b_home_mirco_tab_indicator_style.xml
+++ b/app/src/main/res/drawable-v23/b_home_mirco_tab_indicator_style.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:width="16dp"
-        android:height="3dp"
+        android:left="20dp"
+        android:right="25dp"
         android:gravity="center_horizontal">
 
         <shape>
