--- a/app/src/main/res/layout/item_job_flow_layout.xml
+++ b/app/src/main/res/layout/item_job_flow_layout.xml
@@ -14,7 +14,7 @@
         android:textSize="13sp"
         android:textColor="@color/C_B2"
         android:visibility="gone"
-        android:text="薪资"/>
+        android:text=""/>
 
     <TextView
         android:id="@+id/tv_tag"
