feat: 首页推荐卡

--- a/app/src/main/res/layout/b_home_item_job_keyword.xml
+++ b/app/src/main/res/layout/b_home_item_job_keyword.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/C_B6"
+    android:background="@color/C_S2"
     android:paddingHorizontal="8dp"
     android:paddingBottom="8dp">
 
