--- a/app/src/main/res/layout/item_job_flow_layout.xml
+++ b/app/src/main/res/layout/item_job_flow_layout.xml
@@ -14,7 +14,7 @@
         android:textSize="13sp"
         android:textColor="@color/C_B2"
         android:visibility="gone"
-        android:text=""/>
+        tools:text="薪资"/>
 
     <TextView
         android:id="@+id/tv_tag"
@@ -27,5 +27,18 @@
         android:textColor="@color/color_common_tag_select_test"
         android:background="@drawable/bg_common_tag_item_color"
         android:textSize="@dimen/F_13" />
+
+    <!-- 搜索结果页标签样式 -->
+    <TextView
+        android:id="@+id/tv_search_result_tag"
+        android:layout_width="wrap_content"
+        android:layout_height="28dp"
+        android:gravity="center"
+        android:paddingHorizontal="8dp"
+        tools:text="未查看"
+        android:textColor="@color/color_search_result_tag"
+        android:background="@drawable/bg_search_result_tag"
+        android:textSize="@dimen/F_13"
+        android:visibility="gone"/>
 
 </LinearLayout>
