--- a/app/src/main/res/layout/home_index_item_recommend_job_card.xml
+++ b/app/src/main/res/layout/home_index_item_recommend_job_card.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:paddingHorizontal="8dp"
     android:paddingTop="13dp"
-    android:background="@color/C_B6"
+    android:background="@color/C_S2"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
